openmediavault (5.0.7-1) unstable; urgency=low

  * Fix various bugs in Postfix configuration.
  * Issue #431: Fix bug in monit configuration.
  * Issue #434: The environment variable OMV_SAMBA_SHARE_VFSOBJECTS was
    not taken into action when writing smb.conf.
  * Issue #438: Prevent duplicate VFS objects in smb.conf.
  * Issue #440: Samba announces itself with multicast DNS services.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 03 Sep 2019 21:45:53 +0200

openmediavault (5.0.6-1) unstable; urgency=low

  * Fix bug in creating rsync configuration.
  * Issue #419: Fix bug in NFS configuration file. The fsid was not
    incremented correctly.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 22 Aug 2019 13:05:19 +0200

openmediavault (5.0.5-1) unstable; urgency=low

  * Issue #380: Start rpc-statd service when NFS is enabled.
  * Issue #412: Fix bug in chrony.conf when there are multiple time servers.
  * Issue #413: Fix bug in Salt module omv_conf.get_sharedfolder_path.
  * Issue #414: Fix bug in Filesystem::from_mount_point() method. The old
    implementation was not able to handle Btrfs filesystems.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 21 Jul 2019 21:23:30 +0200

openmediavault (5.0.4-1) unstable; urgency=low

  * Fix obsolete NFS config setting issue.
  * Issue #405: Fix file permissions for 5.0.3 migration script.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 Jul 2019 09:34:58 +0200

openmediavault (5.0.3-1) unstable; urgency=low

  * Code cleanup.
  * Set correct HTTP status codes.
  * Issue #322: Process Device Mapper devices correctly in method
    openmediavault.fs.Filesystem::get_parent_device_file().
  * Disable quota service if not used.
  * Update Material Design icons to version 3.7.95.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 19 May 2019 16:21:00 +0200

openmediavault (5.0.2-1) unstable; urgency=low

  * Fix rsyncd issue.
  * Enable TLS 1.3 in WebGUI.